--- a/i3status/i3status.conf
+++ b/i3status/i3status.conf
@@ -1,14 +1,23 @@
 # i3status configuration file.
 # see "man i3status" for documentation.
+# documentation. https://i3wm.org/docs/i3status.html
 
 # It is important that this file is edited as UTF-8.
 # The following line should contain a sharp s:
 # ß
 # If the above line is not correctly displayed, fix your editor first!
 
+#general {
+#        colors = true
+#        interval = 5
+#}
+
 general {
-        colors = true
-        interval = 5
+  output_format = "i3bar"
+  colors = true
+  color_good = "#05F2F2"
+  color_degraded = "#FFFF00"
+  color_bad = "#FF0000"
 }
 
 #order += "ipv6"
@@ -18,7 +27,10 @@ order += "battery all"
 #order += "disk /"
 #order += "load"
 order += "memory"
-order += "tztime local"
+order += "cpu_temperature 0"
+#order += "tztime local"
+order +="volume master"
+order += "tztime brazil"
 
 wireless _first_ {
         format_up = " %essid%quality"
@@ -32,7 +44,13 @@ ethernet _first_ {
 }
 
 battery all {
-        format = " %status %percentage %remaining "
+        format = "%status %percentage"
+	last_full_capacity = true
+	integer_battery_capacity = true
+	status_chr = "CHR ⚡"	
+	status_bat = "🔋 BAT"
+	status_full = "🔋 FULL"
+
 }
 
 disk "/" {
@@ -49,6 +67,23 @@ memory {
         format_degraded = "MEMORY < %available"
 }
 
-tztime local {
-        format = "%d-%m-%y %H:%M"
+cpu_temperature 0 {
+     format = " %degrees °C"
+}
+
+#tztime local {
+#        format = "%d-%m-%y %H:%M"
+#}
+
+tztime brazil {
+	format = "%d-%m-%y %H:%M"
+	timezone = "/usr/share/zoneinfo/Brazil/East"
+}
+
+volume master{
+	format = "  %volume"
+	format_muted = " (%volume)"
+	device = "default"
+	mixer = "Master"
+	mixer_idx = 0
 }
